@@ -116,8 +116,8 @@
   <!ENTITY module-autopartkit.xml        SYSTEM "##SRCPATH##/using-d-i/modules/autopartkit.xml">
   <!ENTITY module-partitioner.xml        SYSTEM "##SRCPATH##/using-d-i/modules/partitioner.xml">
   <!ENTITY module-partconf.xml           SYSTEM "##SRCPATH##/using-d-i/modules/partconf.xml">
-  <!ENTITY module-partman-lvm.xml        SYSTEM "##SRCPATH##/using-d-i/modules/partman-lvm.xml">
   <!ENTITY module-mdcfg.xml              SYSTEM "##SRCPATH##/using-d-i/modules/mdcfg.xml">
+  <!ENTITY module-partman-lvm.xml        SYSTEM "##SRCPATH##/using-d-i/modules/partman-lvm.xml">
   <!ENTITY module-partman-crypto.xml     SYSTEM "##SRCPATH##/using-d-i/modules/partman-crypto.xml">
   <!ENTITY module-finish-install.xml     SYSTEM "##SRCPATH##/using-d-i/modules/finish-install.xml">
   <!ENTITY module-base-installer.xml     SYSTEM "##SRCPATH##/using-d-i/modules/base-installer.xml">
@@ -125,6 +125,7 @@
   <!ENTITY module-os-prober.xml          SYSTEM "##SRCPATH##/using-d-i/modules/os-prober.xml">
   <!ENTITY module-tzsetup.xml            SYSTEM "##SRCPATH##/using-d-i/modules/tzsetup.xml">
   <!ENTITY module-clock-setup.xml        SYSTEM "##SRCPATH##/using-d-i/modules/clock-setup.xml">
+  <!ENTITY module-clock-setup-finish.xml SYSTEM "##SRCPATH##/using-d-i/modules/clock-setup-finish.xml">
   <!ENTITY module-user-setup.xml         SYSTEM "##SRCPATH##/using-d-i/modules/user-setup.xml">
   <!ENTITY module-apt-setup.xml          SYSTEM "##SRCPATH##/using-d-i/modules/apt-setup.xml">
   <!ENTITY module-pkgsel.xml             SYSTEM "##SRCPATH##/using-d-i/modules/pkgsel.xml">
