@@ -6,29 +6,15 @@
 
 <para>
 
-The installer might ask you if the computer's clock is set to UTC. Normally
-this question is avoided if possible and the installer tries to work out
-whether the clock is set to UTC based on things like what other operating
-systems are installed. 
-
-</para><para>
-
-In expert mode you will always be able to choose
-whether or not the clock is set to UTC.
-<phrase arch="m68k;powerpc">Macintosh hardware clocks are normally
-set to local time. If you want to dual-boot, select local time instead of
-GMT.</phrase>
-<phrase arch="x86">Systems that (also) run Dos or Windows are normally
-set to local time. If you want to dual-boot, select local time
-instead of GMT.</phrase>
-
-</para><para>
-
-Note that the installer does not currently allow you to actually set the
-time in the computer's clock. You can set the clock to the current time
-after you have installed, if it is incorrect or if it was previously not
-set to UTC.
+The installer will first attempt to connect to a time server on the
+Internet (using the <firstterm>NTP</firstterm> protocol) in order to
+correctly set the system time. If this does not succeed, the installer
+will assume the time and date obtained from the system clock when the
+installation system was booted are correct. It is not possible to manually
+set the system time during the installation process.
 
 </para>
+
+&module-tzsetup.xml;
 
    </sect3>
