@@ -2,21 +2,19 @@
 <!-- $Id$ -->
 
    <sect3 id="finish-install">
-   <title>Finish the Installation and Reboot</title>
+   <title>Reboot the System</title>
 
-<para>
+<para arch="not-s390">
 
-This is the last step in the initial Debian installation process. You will
-be prompted to remove the boot media (CD, floppy, etc) that you used to
-boot the installer. The installer will do any last minute tasks, and then
-reboot into your new Debian system.
+You will be prompted to remove the boot media (CD, floppy, etc) that you
+used to boot the installer. After that the system will be rebooted into
+your new Debian system.
 
 </para><para arch="s390">
 
-Select the <guimenuitem>Finish the installation</guimenuitem>
-menu item which will halt the system
-because rebooting is not supported on &arch-title; in this case. You
-then need to IPL GNU/Linux from the DASD which you selected for the
+After a final prompt the system will be halted because rebooting is not
+supported on &arch-title;.
+You then need to IPL &debian; from the DASD which you selected for the
 root filesystem during the first steps of the installation.
 
 </para>
