@@ -1,11 +1,8 @@
 <!-- retain these comments for translator revision tracking -->
 <!-- $Id$ -->
 
-   <sect3 id="user-setup">
-   <title>Setting Up Users And Passwords</title>
-
-    <sect4 id="user-setup-root">
-    <title>Set the Root Password</title>
+   <sect3 id="user-setup-root">
+   <title>Set the Root Password</title>
 
 <!-- TODO: Document sudo setup (no root password); medium/low prio only -->
 
@@ -32,10 +29,10 @@ wary. You should normally never give your root password out, unless you
 are administering a machine with more than one system administrator.
 
 </para>
-   </sect4>
+  </sect3>
 
-   <sect4 id="make-normal-user">
-   <title>Create an Ordinary User</title>
+  <sect3 id="make-normal-user">
+  <title>Create an Ordinary User</title>
 
 <para>
 
@@ -69,5 +66,4 @@ If at any point after installation you would like to create another
 account, use the <command>adduser</command> command.
 
 </para>
-    </sect4>
    </sect3>
