@@ -227,6 +227,23 @@ from the chosen mirror or CD.
 </varlistentry>
 <varlistentry>
 
+<term>clock-setup</term><listitem><para>
+
+Updates the system clock and determines whether the clock is set to UTCr
+or not.
+
+</para></listitem>
+</varlistentry>
+<varlistentry>
+
+<term>tzsetup</term><listitem><para>
+
+Selects the time zone, based on the location selected earlier.
+
+</para></listitem>
+</varlistentry>
+<varlistentry>
+
 <term>partman</term><listitem><para>
 
 Allows the user to partition disks attached to the system, create file
@@ -286,30 +303,6 @@ newer motherboards.
 </para></listitem>
 </varlistentry>
 <varlistentry>
-	
-<term>tzsetup</term><listitem><para>
-
-Selects the time zone, based on the location selected earlier.
-		
-</para></listitem>
-</varlistentry>
-<varlistentry>
-
-<term>clock-setup</term><listitem><para>
-
-Determines whether the clock is set to UTC or not.
-
-</para></listitem>
-</varlistentry>
-<varlistentry>
-	
-<term>user-setup</term><listitem><para>
-
-Sets up the root password, and adds a non-root user.
-
-</para></listitem>
-</varlistentry>
-<varlistentry>
 
 <term>base-installer</term><listitem><para>
 
@@ -319,7 +312,15 @@ the computer to operate under Linux when rebooted.
 </para></listitem>
 </varlistentry>
 <varlistentry>
-	
+
+<term>user-setup</term><listitem><para>
+
+Sets up the root password, and adds a non-root user.
+
+</para></listitem>
+</varlistentry>
+<varlistentry>
+
 <term>apt-setup</term><listitem><para>
 
 Configures apt, mostly automatically, based on what media the installer is
@@ -328,7 +329,7 @@ running from.
 </para></listitem>
 </varlistentry>
 <varlistentry>
-	
+
 <term>pkgsel</term><listitem><para>
 
 Uses <classname>tasksel</classname> to select and install additional software.
@@ -336,7 +337,7 @@ Uses <classname>tasksel</classname> to select and install additional software.
 </para></listitem>
 </varlistentry>
 <varlistentry>
-	
+
 <term>os-prober</term><listitem><para>
 
 Detects currently installed operating systems on the computer and
