@@ -69,8 +69,16 @@ installation-guide (2007xxxx) UNRELEASED; urgency=low
   * Update standards version to 3.7.3; no changes needed.
   * Patch from Changwoo Ryu to replace Hangul-ucs with ko.tex fonts for Korean
     PDF version of the manual. Closes: #457137.
+  * using-d-i:
+    - move clock-setup, tzsetup and user-setup to reflect their changed
+      position in the installation procedure
+    - mention that clock-setup will now attempt to set the system time from a
+      time server
+    - split clock-setup as part is now executed during finish-install
+    - add instructions on how a different time zone from the one(s) that match
+      the selected location can be set (as that is a FAQ)
 
- -- Frans Pop <fjp@debian.org>  Mon, 24 Dec 2007 07:45:03 +0100
+ -- Frans Pop <fjp@debian.org>  Tue, 25 Dec 2007 10:05:51 +0100
 
 installation-guide (20070319) unstable; urgency=low
 
